--- a/GEP_Template/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/GEP_Template/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -124,6 +124,7 @@ Advanced=False
 [DetailCustomWidgetExpansion]
 InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/IA_Inventory.IA_Inventory
 InputAction=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/IA_Inventory.IA_Inventory
+UserDefinedStruct=UserDefinedStruct.Structure.A66225BD4D8CD3F193AE9FA0AD5D677B
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -139,7 +140,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/ThirdPerson/Blueprints
+ContentBrowserDrawer.SelectedPaths=/Game
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -148,9 +149,9 @@ ContentBrowserDrawer.ExpandedCollections=
 ContentBrowserDrawer.ThumbnailSize=2
 ContentBrowserDrawer.CurrentViewType=1
 ContentBrowserDrawer.ZoomScale=0
-ContentBrowserDrawer.JumpMRU=/All/Game/ThirdPerson/Blueprints
-ContentBrowserDrawer.JumpMRU=/All/Game/ThirdPerson
 ContentBrowserDrawer.JumpMRU=/All/Game
+ContentBrowserDrawer.JumpMRU=/All/Game/ThirdPerson
+ContentBrowserDrawer.JumpMRU=/All/Game/ThirdPerson/Blueprints
 ContentBrowserDrawer.JumpMRU=/All/Game/ThirdPerson/Input/Actions
 ContentBrowserDrawer.JumpMRU=/All/Game/ThirdPerson/Input
 ContentBrowserDrawer.JumpMRU=/All/Game/LevelPrototyping
@@ -167,12 +168,16 @@ LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=GenericAssetEditor
-RecentAssetEditors=GenericAssetEditor
+RecentAssetEditors=UserDefinedStructureEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=GenericAssetEditor
+RecentAssetEditors=GenericAssetEditor
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
+OpenAssetsAtExit=/Game/BP_Inventory.BP_Inventory
+OpenAssetsAtExit=/Game/BP_Item.BP_Item
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -604,6 +609,53 @@ BP_Inventory_C.HLOD=True
 BP_Inventory_C.Physics=True
 BP_Inventory_C.Events=True
 BP_ThirdPersonCharacter_C.Default=True
+BP_Item_C.TransformCommon=True
+BP_Item_C.Rendering=True
+BP_Item_C.Replication=True
+BP_Item_C.Collision=True
+BP_Item_C.HLOD=True
+BP_Item_C.Physics=True
+BP_Item_C.Networking=True
+BP_Item_C.Input=True
+BP_Item_C.Actor=True
+BP_Item_C.Tick=True
+BP_Item_C.Events=True
+StaticMeshComponent.Variable=True
+StaticMeshComponent.TransformCommon=True
+StaticMeshComponent.Sockets=True
+StaticMeshComponent.StaticMesh=True
+StaticMeshComponent.ComponentTick=True
+StaticMeshComponent.Physics=True
+StaticMeshComponent.Mesh Painting=True
+StaticMeshComponent.Collision=True
+StaticMeshComponent.Lighting=True
+StaticMeshComponent.HLOD=True
+StaticMeshComponent.Rendering=True
+StaticMeshComponent.Navigation=True
+StaticMeshComponent.VirtualTexture=True
+StaticMeshComponent.Tags=True
+StaticMeshComponent.ComponentReplication=True
+StaticMeshComponent.Cooking=True
+StaticMeshComponent.Events=True
+StaticMeshComponent.Materials=True
+SphereComponent.Variable=True
+SphereComponent.TransformCommon=True
+SphereComponent.Sockets=True
+SphereComponent.Shape=True
+SphereComponent.Navigation=True
+SphereComponent.HLOD=True
+SphereComponent.ComponentTick=True
+SphereComponent.Rendering=True
+SphereComponent.Physics=True
+SphereComponent.Collision=True
+SphereComponent.Tags=True
+SphereComponent.ComponentReplication=True
+SphereComponent.Cooking=True
+SphereComponent.Events=True
+UserDefinedStruct.Structure=True
+DataTable.DataTable=True
+DataTable.ImportOptions=True
+DataTable.File Path=True
 
 [DetailPropertyExpansion]
 StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
@@ -619,11 +671,14 @@ CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem1=/Game/BP_Inventory
-MRUItem2=/Game/ThirdPerson/Input/Actions/IA_Inventory
-MRUItem3=/Game/ThirdPerson/Input/IMC_Default
-MRUItem4=/Game/WB_Menu
+MRUItem0=/Game/DT_ItemDataTable
+MRUItem1=/Game/St_ItemData
+MRUItem2=/Game/BP_Item
+MRUItem3=/Game/WB_Menu
+MRUItem4=/Game/BP_Inventory
+MRUItem5=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem6=/Game/ThirdPerson/Input/Actions/IA_Inventory
+MRUItem7=/Game/ThirdPerson/Input/IMC_Default
 
 [UMGEditor.Designer]
 bCommonResolutionSelected=False
@@ -797,4 +852,7 @@ PerBlueprintSettings=()
 bIncludeCommentNodesInBookmarksTab=True
 bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
+
+[PlacementMode]
+RecentlyPlaced=/Game/BP_Item.BP_Item;
 
