More work on inventory

--- a/GEP_Template/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/GEP_Template/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -186,9 +186,14 @@ Advanced=False
 InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/IA_Inventory.IA_Inventory
 InputAction=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/IA_Inventory.IA_Inventory
 UserDefinedStruct=
+PropertyWrapper=PropertyWrapper.DefaultValueCategory.InventorySlot
+BP_InventoryComponent_C=PropertyWrapper.DefaultValueCategory.InventorySlot
+K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.InventorySlot
+WB_InventorySlot_C=PropertyWrapper.DefaultValueCategory.InventorySlot
+WB_Menu_C=
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/ThirdPerson/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserDrawer.SourcesExpanded=True
 ContentBrowserDrawer.IsLocked=False
 ContentBrowserDrawer.FavoritesAreaExpanded=False
@@ -232,19 +237,20 @@ LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 CleanShutdown=False
 DebuggerAttached=False
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=UserDefinedStructureEditor
-RecentAssetEditors=DataTableEditor
 RecentAssetEditors=UserDefinedStructureEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=GenericAssetEditor
-RecentAssetEditors=GenericAssetEditor
-OpenAssetsAtExit=/Game/ThirdPerson/Input/IMC_Default.IMC_Default
-OpenAssetsAtExit=/Game/St_ItemData.St_ItemData
-OpenAssetsAtExit=/Game/DT_ItemDataTable.DT_ItemDataTable
 OpenAssetsAtExit=/Game/BP_Item.BP_Item
+OpenAssetsAtExit=/Game/BP_InventoryComponent.BP_InventoryComponent
+OpenAssetsAtExit=/Game/WB_Menu.WB_Menu
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
+OpenAssetsAtExit=/Game/St_InventorySlots.St_InventorySlots
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -822,7 +828,7 @@ InputTriggerPulse.Trigger Settings=True
 EnhancedInputDeveloperSettings.Trigger Default Values=True
 EnhancedInputEditorProjectSettings.Default=True
 MegascansMaterialParentSettings.Parent Materials=True
-InterchangeFbxSettings.FBX =True
+InterchangeFbxSettings.FBX=True
 GameplayDebuggerConfig.Input=True
 GameplayDebuggerConfig.Display=True
 GameplayDebuggerConfig.AddOns=True
@@ -1130,6 +1136,44 @@ PrimitiveComponent.Materials=True
 BP_ThirdPersonCharacter_C.SkeletalMesh=True
 CapsuleComponent.Navigation=True
 CapsuleComponent.Collision=True
+Image.Appearance=True
+Image.Accessibility=True
+Image.Behavior=True
+Image.Render Transform=True
+Image.Performance=True
+Image.Rendering=True
+Image.Navigation=True
+Image.Localization=True
+Image.Events=True
+WB_InventorySlot_C.Appearance=True
+WB_InventorySlot_C.Input=True
+WB_InventorySlot_C.Interaction=True
+WB_InventorySlot_C.Designer=True
+WB_InventorySlot_C.Performance=True
+WB_InventorySlot_C.Layout=True
+WB_InventorySlot_C.Behavior=True
+WB_InventorySlot_C.Render Transform=True
+WB_InventorySlot_C.Localization=True
+WB_InventorySlot_C.Accessibility=True
+WB_InventorySlot_C.Rendering=True
+WB_InventorySlot_C.Navigation=True
+WB_InventorySlot_C.Default=True
+WB_InventorySlot_C.Events=True
+EdGraph.Graph=True
+WB_Menu_C.Appearance=True
+WB_Menu_C.Input=True
+WB_Menu_C.Interaction=True
+WB_Menu_C.Designer=True
+WB_Menu_C.Performance=True
+WB_Menu_C.Layout=True
+WB_Menu_C.Behavior=True
+WB_Menu_C.Render Transform=True
+WB_Menu_C.Localization=True
+WB_Menu_C.Accessibility=True
+WB_Menu_C.Rendering=True
+WB_Menu_C.Navigation=True
+UserDefinedStruct.DefaultValues=True
+K2Node_BreakStruct.PinOptions=True
 
 [DetailPropertyExpansion]
 StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
@@ -1145,27 +1189,29 @@ CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 MassSettings="\"Object.Mass\" "
 DeveloperSettings=
-PrimitiveComponent="\"Object.Collision.BodyInstance\" "
+PrimitiveComponent=
 SceneComponent=
-ActorComponent=
+ActorComponent="\"Object.InventorySlot\" "
 StaticMeshComponent="\"Object.Collision.BodyInstance\" "
 MeshComponent=
-BP_ThirdPersonCharacter_C="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CharacterMovement.Object.NavMovement.NavMovementProperties\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
-Character="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CharacterMovement.Object.NavMovement.NavMovementProperties\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
-Pawn="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CharacterMovement.Object.NavMovement.NavMovementProperties\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
+BP_ThirdPersonCharacter_C=
+Character=
+Pawn=
 CapsuleComponent="\"Object.Collision.BodyInstance\" "
 ShapeComponent="\"Object.Collision.BodyInstance\" "
+BP_InventoryComponent_C="\"Object.InventorySlot\" "
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/ThirdPerson/Input/IMC_Default
+MRUItem0=/Game/St_InventorySlots
 MRUItem1=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem2=/Game/BP_InventoryComponent
-MRUItem3=/Game/BP_Item
-MRUItem4=/Game/St_InventorySlots
-MRUItem5=/Game/DT_ItemDataTable
-MRUItem6=/Game/St_ItemData
-MRUItem7=/Game/WB_Menu
-MRUItem8=/Game/ThirdPerson/Input/Actions/IA_Inventory
+MRUItem2=/Game/WB_InventorySlot
+MRUItem3=/Game/WB_Menu
+MRUItem4=/Game/BP_InventoryComponent
+MRUItem5=/Game/BP_Item
+MRUItem6=/Game/ThirdPerson/Input/IMC_Default
+MRUItem7=/Game/DT_ItemDataTable
+MRUItem8=/Game/St_ItemData
+MRUItem9=/Game/ThirdPerson/Input/Actions/IA_Inventory
 
 [UMGEditor.Designer]
 bCommonResolutionSelected=False
@@ -2671,4 +2717,9 @@ DeleteComponentInUse_Warning=False
 
 [DetailCategoriesAdvanced]
 K2Node_CustomEvent.Graph=False
+WB_InventorySlot_C.Accessibility=False
+WB_InventorySlot_C.Behavior=False
+
+[MessageLog]
+LastLogListing=BlueprintLog
 
