--- a/GEP_Template/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/GEP_Template/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -191,6 +191,13 @@ BP_InventoryComponent_C=PropertyWrapper.DefaultValueCategory.InventorySlot
 K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.InventorySlot
 WB_InventorySlot_C=PropertyWrapper.DefaultValueCategory.InventorySlot
 WB_Menu_C=
+BP_ThirdPersonCharacter_C=PropertyWrapper.DefaultValueCategory.InventorySlot
+BP_Item_C=PropertyWrapper.DefaultValueCategory.InventorySlot
+K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.InventorySlot
+K2Node_CallFunction=PropertyWrapper.DefaultValueCategory.InventorySlot
+SkeletalMeshComponent=PropertyWrapper.DefaultValueCategory.InventorySlot
+CapsuleComponent=PropertyWrapper.DefaultValueCategory.InventorySlot
+SceneComponent=
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game
@@ -236,8 +243,8 @@ LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -247,10 +254,10 @@ RecentAssetEditors=UserDefinedStructureEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=GenericAssetEditor
 OpenAssetsAtExit=/Game/BP_Item.BP_Item
-OpenAssetsAtExit=/Game/BP_InventoryComponent.BP_InventoryComponent
 OpenAssetsAtExit=/Game/WB_Menu.WB_Menu
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
-OpenAssetsAtExit=/Game/St_InventorySlots.St_InventorySlots
+OpenAssetsAtExit=/Game/WB_InventorySlot.WB_InventorySlot
+OpenAssetsAtExit=/Game/BP_InventoryComponent.BP_InventoryComponent
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -735,13 +742,13 @@ K2Node_CustomEvent.Graph=True
 K2Node_CustomEvent.Inputs=True
 UniformGridPanel.Layout=True
 UniformGridPanel.Child Layout=True
-UniformGridPanel.Accessibility=True
+UniformGridPanel.Accessibility=False
 UniformGridPanel.Behavior=True
-UniformGridPanel.Render Transform=True
-UniformGridPanel.Performance=True
-UniformGridPanel.Rendering=True
-UniformGridPanel.Navigation=True
-UniformGridPanel.Localization=True
+UniformGridPanel.Render Transform=False
+UniformGridPanel.Performance=False
+UniformGridPanel.Rendering=False
+UniformGridPanel.Navigation=False
+UniformGridPanel.Localization=False
 BP_Inventory_C.Default=True
 BP_InventoryComponent_C.ComponentTick=True
 BP_InventoryComponent_C.Tags=True
@@ -1174,14 +1181,118 @@ WB_Menu_C.Rendering=True
 WB_Menu_C.Navigation=True
 UserDefinedStruct.DefaultValues=True
 K2Node_BreakStruct.PinOptions=True
+K2Node_CallFunction.Graph=True
+CharacterMovementComponent.Variable=True
+CharacterMovementComponent.Sockets=True
+CharacterMovementComponent.Character Movement (General Settings)=True
+CharacterMovementComponent.Character Movement: Walking=True
+CharacterMovementComponent.Character Movement: Jumping / Falling=True
+CharacterMovementComponent.ComponentTick=True
+CharacterMovementComponent.Character Movement: Gravity=True
+CharacterMovementComponent.Character Movement (Networking)=True
+CharacterMovementComponent.Character Movement: Swimming=True
+CharacterMovementComponent.Character Movement: Flying=True
+CharacterMovementComponent.Character Movement: Custom Movement=True
+CharacterMovementComponent.Character Movement (Rotation Settings)=True
+CharacterMovementComponent.Character Movement: Physics Interaction=True
+CharacterMovementComponent.Character Movement=True
+CharacterMovementComponent.Character Movement: Avoidance=True
+CharacterMovementComponent.RootMotion=True
+CharacterMovementComponent.Character Movement: NavMesh Movement=True
+CharacterMovementComponent.NavMovement=True
+CharacterMovementComponent.Velocity=True
+CharacterMovementComponent.PlanarMovement=True
+CharacterMovementComponent.MovementComponent=True
+CharacterMovementComponent.Tags=True
+CharacterMovementComponent.ComponentReplication=True
+CharacterMovementComponent.Activation=True
+CharacterMovementComponent.Cooking=True
+CharacterMovementComponent.Events=True
+CapsuleComponent.Variable=True
+CapsuleComponent.TransformCommon=True
+CapsuleComponent.Sockets=True
+CapsuleComponent.Shape=True
+CapsuleComponent.HLOD=True
+CapsuleComponent.ComponentTick=True
+CapsuleComponent.Rendering=True
+CapsuleComponent.Physics=True
+CapsuleComponent.Tags=True
+CapsuleComponent.ComponentReplication=True
+CapsuleComponent.Cooking=True
+CapsuleComponent.Events=True
+SpringArmComponent.Variable=True
+SpringArmComponent.TransformCommon=True
+SpringArmComponent.Sockets=True
+SpringArmComponent.Camera=True
+SpringArmComponent.CameraCollision=True
+SpringArmComponent.CameraSettings=True
+SpringArmComponent.ComponentTick=True
+SpringArmComponent.Lag=True
+SpringArmComponent.Rendering=True
+SpringArmComponent.Tags=True
+SpringArmComponent.ComponentReplication=True
+SpringArmComponent.Activation=True
+SpringArmComponent.Cooking=True
+SpringArmComponent.Events=True
+CameraComponent.Variable=True
+CameraComponent.TransformCommon=True
+CameraComponent.Sockets=True
+CameraComponent.CameraSettings=True
+CameraComponent.CameraOptions=True
+CameraComponent.Camera=True
+CameraComponent.ComponentTick=True
+CameraComponent.PostProcess=True
+CameraComponent.Tags=True
+CameraComponent.ComponentReplication=True
+CameraComponent.Activation=True
+CameraComponent.Cooking=True
+CameraComponent.Events=True
+SkeletalMeshComponent.Variable=True
+SkeletalMeshComponent.TransformCommon=True
+SkeletalMeshComponent.Sockets=True
+SkeletalMeshComponent.Animation=True
+SkeletalMeshComponent.Mesh=True
+SkeletalMeshComponent.ComponentTick=True
+SkeletalMeshComponent.Clothing=True
+SkeletalMeshComponent.LeaderPoseComponent=True
+SkeletalMeshComponent.Physics=True
+SkeletalMeshComponent.AnimationRig=True
+SkeletalMeshComponent.Collision=True
+SkeletalMeshComponent.Deformer=True
+SkeletalMeshComponent.Lighting=True
+SkeletalMeshComponent.HLOD=True
+SkeletalMeshComponent.SkinWeights=True
+SkeletalMeshComponent.Rendering=True
+SkeletalMeshComponent.Navigation=True
+SkeletalMeshComponent.VirtualTexture=True
+SkeletalMeshComponent.Tags=True
+SkeletalMeshComponent.ComponentReplication=True
+SkeletalMeshComponent.Activation=True
+SkeletalMeshComponent.Cooking=True
+SkeletalMeshComponent.Events=True
+SkeletalMeshComponent.Materials=True
+Image.Layout=True
+Border.Content=True
+Border.Appearance=True
+Border.Accessibility=True
+Border.Behavior=True
+Border.Render Transform=True
+Border.Performance=True
+Border.Rendering=True
+Border.Navigation=True
+Border.Localization=True
+Border.Events=True
+WB_Menu_C.Default=True
+WB_Menu_C.Events=True
+Border.Layout=True
 
 [DetailPropertyExpansion]
 StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
-TextBlock="\"Object.Appearance.Font\" "
-TextLayoutWidget="\"Object.Appearance.Font\" "
-Widget=
-Visual=
-Object=
+TextBlock="\"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" "
+TextLayoutWidget="\"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" "
+Widget="\"Object.Content.Padding\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object.Content.Padding\" \"Object.Render Transform.RenderTransform\" "
+Object="\"Object.Content.Padding\" \"Object.Render Transform.RenderTransform\" "
 InputMappingContext="\"Object.Mappings.Mappings.Mappings[14]\" "
 DataAsset=
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.AutoSave\" \"Object.Blueprints\" "
@@ -1189,25 +1300,36 @@ CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 MassSettings="\"Object.Mass\" "
 DeveloperSettings=
-PrimitiveComponent=
+PrimitiveComponent="\"Object.Collision.BodyInstance\" "
 SceneComponent=
-ActorComponent="\"Object.InventorySlot\" "
+ActorComponent=
 StaticMeshComponent="\"Object.Collision.BodyInstance\" "
-MeshComponent=
+MeshComponent="\"Object.Collision.BodyInstance\" "
 BP_ThirdPersonCharacter_C=
 Character=
 Pawn=
 CapsuleComponent="\"Object.Collision.BodyInstance\" "
 ShapeComponent="\"Object.Collision.BodyInstance\" "
-BP_InventoryComponent_C="\"Object.InventorySlot\" "
+BP_InventoryComponent_C=
+SkeletalMeshComponent="\"Object.Collision.BodyInstance\" "
+SkinnedMeshComponent="\"Object.Collision.BodyInstance\" "
+UniformGridPanel="\"Object.Child Layout.SlotPadding\" \"Object.Render Transform.RenderTransform\" "
+PanelWidget="\"Object.Content.Padding\" \"Object.Render Transform.RenderTransform\" "
+Image="\"Object.Appearance.Brush\" \"Object.Appearance.Brush.TintColor\" \"Object.Appearance.Brush.OutlineSettings.Color\" \"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
+WB_InventorySlot_C="\"Object.Render Transform.RenderTransform\" "
+UserWidget="\"Object.Render Transform.RenderTransform\" "
+Border="\"Object.Content.Padding\" \"Object.Render Transform.RenderTransform\" "
+ContentWidget="\"Object.Content.Padding\" \"Object.Render Transform.RenderTransform\" "
+WB_Menu_C=
+CanvasPanel="\"Object.Render Transform.RenderTransform\" "
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/St_InventorySlots
-MRUItem1=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem2=/Game/WB_InventorySlot
+MRUItem0=/Game/BP_InventoryComponent
+MRUItem1=/Game/WB_InventorySlot
+MRUItem2=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
 MRUItem3=/Game/WB_Menu
-MRUItem4=/Game/BP_InventoryComponent
-MRUItem5=/Game/BP_Item
+MRUItem4=/Game/BP_Item
+MRUItem5=/Game/St_InventorySlots
 MRUItem6=/Game/ThirdPerson/Input/IMC_Default
 MRUItem7=/Game/DT_ItemDataTable
 MRUItem8=/Game/St_ItemData
@@ -2719,7 +2841,9 @@ DeleteComponentInUse_Warning=False
 K2Node_CustomEvent.Graph=False
 WB_InventorySlot_C.Accessibility=False
 WB_InventorySlot_C.Behavior=False
+UniformGridPanel.Behavior=False
+PropertyWrapper.Variable=False
 
 [MessageLog]
-LastLogListing=BlueprintLog
+LastLogListing=PIE
 
