Adjusting Inventory items still not loading

--- a/GEP_Template/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/GEP_Template/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -186,21 +186,28 @@ Advanced=False
 InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/IA_Inventory.IA_Inventory
 InputAction=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/IA_Inventory.IA_Inventory
 UserDefinedStruct=
-PropertyWrapper=PropertyWrapper.DefaultValueCategory.InventorySlot
-BP_InventoryComponent_C=PropertyWrapper.DefaultValueCategory.InventorySlot
-K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.InventorySlot
-WB_InventorySlot_C=PropertyWrapper.DefaultValueCategory.InventorySlot
-WB_Menu_C=
-BP_ThirdPersonCharacter_C=PropertyWrapper.DefaultValueCategory.InventorySlot
+PropertyWrapper=PropertyWrapper.DefaultValueCategory.InventorySlot,K2Node_VariableGet.DefaultValueCategory.InventorySlot
+BP_InventoryComponent_C=PropertyWrapper.DefaultValueCategory.InventorySlot,K2Node_VariableGet.DefaultValueCategory.InventorySlot
+K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.InventorySlot,K2Node_VariableGet.DefaultValueCategory.InventorySlot
+WB_InventorySlot_C=PropertyWrapper.DefaultValueCategory.InventorySlot,K2Node_VariableGet.DefaultValueCategory.InventorySlot
+WB_Menu_C=PropertyWrapper.DefaultValueCategory.InventorySlot,K2Node_VariableGet.DefaultValueCategory.InventorySlot
+BP_ThirdPersonCharacter_C=PropertyWrapper.DefaultValueCategory.InventorySlot,K2Node_VariableGet.DefaultValueCategory.InventorySlot
 BP_Item_C=PropertyWrapper.DefaultValueCategory.InventorySlot
-K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.InventorySlot
+K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.InventorySlot,K2Node_VariableGet.DefaultValueCategory.InventorySlot
 K2Node_CallFunction=PropertyWrapper.DefaultValueCategory.InventorySlot
-SkeletalMeshComponent=PropertyWrapper.DefaultValueCategory.InventorySlot
+SkeletalMeshComponent=PropertyWrapper.DefaultValueCategory.InventorySlot,K2Node_VariableGet.DefaultValueCategory.InventorySlot
 CapsuleComponent=PropertyWrapper.DefaultValueCategory.InventorySlot
-SceneComponent=
+SceneComponent=PropertyWrapper.DefaultValueCategory.InventorySlot
+StaticMeshActor=PropertyWrapper.DefaultValueCategory.InventorySlot
+K2Node_BreakStruct=PropertyWrapper.DefaultValueCategory.InventorySlot,K2Node_VariableGet.DefaultValueCategory.InventorySlot
+K2Node_CustomEvent=PropertyWrapper.DefaultValueCategory.InventorySlot
+K2Node_MacroInstance=PropertyWrapper.DefaultValueCategory.InventorySlot,K2Node_VariableGet.DefaultValueCategory.InventorySlot
+K2Node_SetFieldsInStruct=K2Node_SetFieldsInStruct.PinOptions.ShowPinForProperties
+K2Node_Variable=PropertyWrapper.DefaultValueCategory.InventorySlot,K2Node_VariableGet.DefaultValueCategory.InventorySlot
+K2Node=PropertyWrapper.DefaultValueCategory.InventorySlot,K2Node_VariableGet.DefaultValueCategory.InventorySlot
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/ThirdPerson/Blueprints
 ContentBrowserDrawer.SourcesExpanded=True
 ContentBrowserDrawer.IsLocked=False
 ContentBrowserDrawer.FavoritesAreaExpanded=False
@@ -243,20 +250,23 @@ LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
-RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=DataTableEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=UserDefinedStructureEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=UserDefinedStructureEditor
-RecentAssetEditors=UserDefinedStructureEditor
 RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=UserDefinedStructureEditor
 RecentAssetEditors=GenericAssetEditor
-OpenAssetsAtExit=/Game/BP_Item.BP_Item
 OpenAssetsAtExit=/Game/WB_Menu.WB_Menu
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
 OpenAssetsAtExit=/Game/WB_InventorySlot.WB_InventorySlot
+OpenAssetsAtExit=/Game/St_InventorySlots.St_InventorySlots
+OpenAssetsAtExit=/Game/DT_ItemDataTable.DT_ItemDataTable
+OpenAssetsAtExit=/Game/BP_Item.BP_Item
+OpenAssetsAtExit=/Game/St_ItemData.St_ItemData
+OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
 OpenAssetsAtExit=/Game/BP_InventoryComponent.BP_InventoryComponent
 
 [DetailCategories]
@@ -743,7 +753,7 @@ K2Node_CustomEvent.Inputs=True
 UniformGridPanel.Layout=True
 UniformGridPanel.Child Layout=True
 UniformGridPanel.Accessibility=False
-UniformGridPanel.Behavior=True
+UniformGridPanel.Behavior=False
 UniformGridPanel.Render Transform=False
 UniformGridPanel.Performance=False
 UniformGridPanel.Rendering=False
@@ -1285,14 +1295,16 @@ Border.Events=True
 WB_Menu_C.Default=True
 WB_Menu_C.Events=True
 Border.Layout=True
+BP_Item_C.Default=True
+K2Node_SetFieldsInStruct.PinOptions=True
 
 [DetailPropertyExpansion]
 StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
 TextBlock="\"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" "
 TextLayoutWidget="\"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" "
-Widget="\"Object.Content.Padding\" \"Object.Render Transform.RenderTransform\" "
-Visual="\"Object.Content.Padding\" \"Object.Render Transform.RenderTransform\" "
-Object="\"Object.Content.Padding\" \"Object.Render Transform.RenderTransform\" "
+Widget="\"Object.Child Layout.SlotPadding\" \"Object.Layout.Slot.Object.Layout.Layout|Border Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object.Child Layout.SlotPadding\" \"Object.Layout.Slot.Object.Layout.Layout|Border Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
+Object="\"Object.Child Layout.SlotPadding\" \"Object.Layout.Slot.Object.Layout.Layout|Border Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
 InputMappingContext="\"Object.Mappings.Mappings.Mappings[14]\" "
 DataAsset=
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.AutoSave\" \"Object.Blueprints\" "
@@ -1300,39 +1312,39 @@ CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 MassSettings="\"Object.Mass\" "
 DeveloperSettings=
-PrimitiveComponent="\"Object.Collision.BodyInstance\" "
+PrimitiveComponent=
 SceneComponent=
 ActorComponent=
 StaticMeshComponent="\"Object.Collision.BodyInstance\" "
-MeshComponent="\"Object.Collision.BodyInstance\" "
+MeshComponent=
 BP_ThirdPersonCharacter_C=
 Character=
 Pawn=
 CapsuleComponent="\"Object.Collision.BodyInstance\" "
 ShapeComponent="\"Object.Collision.BodyInstance\" "
 BP_InventoryComponent_C=
-SkeletalMeshComponent="\"Object.Collision.BodyInstance\" "
-SkinnedMeshComponent="\"Object.Collision.BodyInstance\" "
-UniformGridPanel="\"Object.Child Layout.SlotPadding\" \"Object.Render Transform.RenderTransform\" "
-PanelWidget="\"Object.Content.Padding\" \"Object.Render Transform.RenderTransform\" "
-Image="\"Object.Appearance.Brush\" \"Object.Appearance.Brush.TintColor\" \"Object.Appearance.Brush.OutlineSettings.Color\" \"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
-WB_InventorySlot_C="\"Object.Render Transform.RenderTransform\" "
-UserWidget="\"Object.Render Transform.RenderTransform\" "
+SkeletalMeshComponent=
+SkinnedMeshComponent=
+UniformGridPanel="\"Object.Child Layout.SlotPadding\" \"Object.Layout.Slot.Object.Layout.Layout|Border Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
+PanelWidget="\"Object.Child Layout.SlotPadding\" \"Object.Layout.Slot.Object.Layout.Layout|Border Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
+Image="\"Object.Appearance.Brush\" \"Object.Appearance.Brush.TintColor\" \"Object.Appearance.Brush.OutlineSettings.Color\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot.Object.Layout.Layout|Border Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
+WB_InventorySlot_C=
+UserWidget=
 Border="\"Object.Content.Padding\" \"Object.Render Transform.RenderTransform\" "
 ContentWidget="\"Object.Content.Padding\" \"Object.Render Transform.RenderTransform\" "
 WB_Menu_C=
 CanvasPanel="\"Object.Render Transform.RenderTransform\" "
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/BP_InventoryComponent
-MRUItem1=/Game/WB_InventorySlot
-MRUItem2=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem3=/Game/WB_Menu
+MRUItem0=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem1=/Game/DT_ItemDataTable
+MRUItem2=/Game/BP_InventoryComponent
+MRUItem3=/Game/St_ItemData
 MRUItem4=/Game/BP_Item
 MRUItem5=/Game/St_InventorySlots
-MRUItem6=/Game/ThirdPerson/Input/IMC_Default
-MRUItem7=/Game/DT_ItemDataTable
-MRUItem8=/Game/St_ItemData
+MRUItem6=/Game/WB_InventorySlot
+MRUItem7=/Game/WB_Menu
+MRUItem8=/Game/ThirdPerson/Input/IMC_Default
 MRUItem9=/Game/ThirdPerson/Input/Actions/IA_Inventory
 
 [UMGEditor.Designer]
@@ -1457,6 +1469,7 @@ GeneralProjectSettings=True
 /Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter=1
 /Game/ThirdPerson/Input/Actions/IA_Inventory.IA_Inventory=1
 /Game/BP_Item.BP_Item=1
+/Game/DT_ItemDataTable.DT_ItemDataTable=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1480,8 +1493,8 @@ bHostFindInBlueprintsInGlobalTab=True
 bNavigateToNativeFunctionsFromCallNodes=True
 bDoubleClickNavigatesToParent=True
 bEnableTypePromotion=True
-TypePromotionPinDenyList=text
 TypePromotionPinDenyList=string
+TypePromotionPinDenyList=text
 BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
 bEnableNamespaceEditorFeatures=True
@@ -2836,6 +2849,7 @@ RecentsFiles=C:/Program Files/Epic Games/UE_5.5/Engine/Plugins/Animation/Control
 [SuppressableDialogs]
 ChangeVariableType_Warning=False
 DeleteComponentInUse_Warning=False
+DeleteConfirmationVariable_Warning=False
 
 [DetailCategoriesAdvanced]
 K2Node_CustomEvent.Graph=False
