Working item pickup system

--- a/GEP_Template/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/GEP_Template/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -195,7 +195,7 @@ BP_ThirdPersonCharacter_C=PropertyWrapper.DefaultValueCategory.InventorySlot,K2N
 BP_Item_C=PropertyWrapper.DefaultValueCategory.InventorySlot
 K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.InventorySlot,K2Node_VariableGet.DefaultValueCategory.InventorySlot
 K2Node_CallFunction=PropertyWrapper.DefaultValueCategory.InventorySlot
-SkeletalMeshComponent=
+SkeletalMeshComponent=PropertyWrapper.DefaultValueCategory.InventorySlot,K2Node_VariableGet.DefaultValueCategory.InventorySlot
 CapsuleComponent=PropertyWrapper.DefaultValueCategory.InventorySlot
 SceneComponent=PropertyWrapper.DefaultValueCategory.InventorySlot
 StaticMeshActor=PropertyWrapper.DefaultValueCategory.InventorySlot
@@ -207,7 +207,7 @@ K2Node_Variable=PropertyWrapper.DefaultValueCategory.InventorySlot,K2Node_Variab
 K2Node=PropertyWrapper.DefaultValueCategory.InventorySlot,K2Node_VariableGet.DefaultValueCategory.InventorySlot
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/ThirdPerson/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserDrawer.SourcesExpanded=True
 ContentBrowserDrawer.IsLocked=False
 ContentBrowserDrawer.FavoritesAreaExpanded=False
@@ -271,26 +271,24 @@ ContentBrowserTab1.JumpMRU=/All
 LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=DataTableEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=UserDefinedStructureEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=UserDefinedStructureEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=UserDefinedStructureEditor
 RecentAssetEditors=GenericAssetEditor
+OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
 OpenAssetsAtExit=/Game/WB_Menu.WB_Menu
 OpenAssetsAtExit=/Game/WB_InventorySlot.WB_InventorySlot
-OpenAssetsAtExit=/Game/St_InventorySlots.St_InventorySlots
-OpenAssetsAtExit=/Game/DT_ItemDataTable.DT_ItemDataTable
-OpenAssetsAtExit=/Game/BP_Item.BP_Item
-OpenAssetsAtExit=/Game/St_ItemData.St_ItemData
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
 OpenAssetsAtExit=/Game/BP_InventoryComponent.BP_InventoryComponent
+OpenAssetsAtExit=/Game/BP_Item.BP_Item
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -775,9 +773,9 @@ K2Node_CustomEvent.Graph=True
 K2Node_CustomEvent.Inputs=True
 UniformGridPanel.Layout=True
 UniformGridPanel.Child Layout=True
-UniformGridPanel.Accessibility=False
-UniformGridPanel.Behavior=False
-UniformGridPanel.Render Transform=False
+UniformGridPanel.Accessibility=True
+UniformGridPanel.Behavior=True
+UniformGridPanel.Render Transform=True
 UniformGridPanel.Performance=False
 UniformGridPanel.Rendering=False
 UniformGridPanel.Navigation=False
@@ -1320,13 +1318,15 @@ WB_Menu_C.Events=True
 Border.Layout=True
 BP_Item_C.Default=True
 K2Node_SetFieldsInStruct.PinOptions=True
+EdGraphNode_Comment.GraphNodeDetail=True
+EdGraphNode_Comment.Comment=True
 
 [DetailPropertyExpansion]
 StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
 TextBlock="\"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" "
 TextLayoutWidget="\"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" "
-Widget="\"Object.Appearance.Brush\" \"Object.Appearance.Brush.TintColor\" \"Object.Appearance.Brush.OutlineSettings.Color\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot.Object.Layout.Layout|Border Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
-Visual="\"Object.Appearance.Brush\" \"Object.Appearance.Brush.TintColor\" \"Object.Appearance.Brush.OutlineSettings.Color\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot.Object.Layout.Layout|Border Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
+Widget=
+Visual=
 Object=
 InputMappingContext="\"Object.Mappings.Mappings.Mappings[14]\" "
 DataAsset=
@@ -1348,8 +1348,8 @@ ShapeComponent="\"Object.Collision.BodyInstance\" "
 BP_InventoryComponent_C=
 SkeletalMeshComponent=
 SkinnedMeshComponent=
-UniformGridPanel="\"Object.Child Layout.SlotPadding\" \"Object.Layout.Slot.Object.Layout.Layout|Border Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
-PanelWidget="\"Object.Child Layout.SlotPadding\" \"Object.Layout.Slot.Object.Layout.Layout|Border Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
+UniformGridPanel="\"Object.Child Layout.SlotPadding\" \"Object.Render Transform.RenderTransform\" "
+PanelWidget="\"Object.Content.Padding\" \"Object.Render Transform.RenderTransform\" "
 Image="\"Object.Appearance.Brush\" \"Object.Appearance.Brush.TintColor\" \"Object.Appearance.Brush.OutlineSettings.Color\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot.Object.Layout.Layout|Border Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
 WB_InventorySlot_C=
 UserWidget=
@@ -1359,16 +1359,17 @@ WB_Menu_C=
 CanvasPanel="\"Object.Render Transform.RenderTransform\" "
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem1=/Game/DT_ItemDataTable
+MRUItem0=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem1=/Game/BP_Item
 MRUItem2=/Game/BP_InventoryComponent
-MRUItem3=/Game/St_ItemData
-MRUItem4=/Game/BP_Item
-MRUItem5=/Game/St_InventorySlots
-MRUItem6=/Game/WB_InventorySlot
-MRUItem7=/Game/WB_Menu
-MRUItem8=/Game/ThirdPerson/Input/IMC_Default
-MRUItem9=/Game/ThirdPerson/Input/Actions/IA_Inventory
+MRUItem3=/Game/WB_InventorySlot
+MRUItem4=/Game/WB_Menu
+MRUItem5=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem6=/Game/DT_ItemDataTable
+MRUItem7=/Game/St_ItemData
+MRUItem8=/Game/St_InventorySlots
+MRUItem9=/Game/ThirdPerson/Input/IMC_Default
+MRUItem10=/Game/ThirdPerson/Input/Actions/IA_Inventory
 
 [UMGEditor.Designer]
 bCommonResolutionSelected=False
@@ -1498,6 +1499,7 @@ GeneralProjectSettings=True
 /Game/St_InventorySlots.St_InventorySlots=1
 /Game/St_ItemData.St_ItemData=1
 /Game/BP_InventoryComponent.BP_InventoryComponent=1
+/Engine/EditorBlueprintResources/StandardMacros.StandardMacros=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1521,8 +1523,8 @@ bHostFindInBlueprintsInGlobalTab=True
 bNavigateToNativeFunctionsFromCallNodes=True
 bDoubleClickNavigatesToParent=True
 bEnableTypePromotion=True
-TypePromotionPinDenyList=string
 TypePromotionPinDenyList=text
+TypePromotionPinDenyList=string
 BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
 bEnableNamespaceEditorFeatures=True
@@ -2885,6 +2887,7 @@ WB_InventorySlot_C.Accessibility=False
 WB_InventorySlot_C.Behavior=False
 UniformGridPanel.Behavior=False
 PropertyWrapper.Variable=False
+UniformGridPanel.Accessibility=False
 
 [MessageLog]
 LastLogListing=PIE
