Working on chest

--- a/GEP_Template/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/GEP_Template/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -212,9 +212,10 @@ K2Node_MacroInstance=PropertyWrapper.DefaultValueCategory.InventorySlot,K2Node_V
 K2Node_SetFieldsInStruct=K2Node_SetFieldsInStruct.PinOptions.ShowPinForProperties
 K2Node_Variable=PropertyWrapper.DefaultValueCategory.InventorySlot,K2Node_VariableGet.DefaultValueCategory.InventorySlot
 K2Node=PropertyWrapper.DefaultValueCategory.InventorySlot,K2Node_VariableGet.DefaultValueCategory.InventorySlot
+BP_Chest_C=PropertyWrapper.DefaultValueCategory.InventorySlot
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/FreeMeleeWeaps/Static_Meshes
+ContentBrowserTab1.SelectedPaths=/Game/ThirdPerson/Blueprints
 ContentBrowserDrawer.SourcesExpanded=True
 ContentBrowserDrawer.IsLocked=False
 ContentBrowserDrawer.FavoritesAreaExpanded=False
@@ -280,21 +281,26 @@ LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
-RecentAssetEditors=
-RecentAssetEditors=
-RecentAssetEditors=
-RecentAssetEditors=
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=DataTableEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
 RecentAssetEditors=UserDefinedStructureEditor
 RecentAssetEditors=UserDefinedStructureEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=UserDefinedStructureEditor
 RecentAssetEditors=GenericAssetEditor
+OpenAssetsAtExit=/Game/DT_ItemDataTable.DT_ItemDataTable
+OpenAssetsAtExit=/Game/WB_Menu.WB_Menu
+OpenAssetsAtExit=/Game/BP_InventoryComponent.BP_InventoryComponent
+OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1326,6 +1332,17 @@ BP_Item_C.Default=True
 K2Node_SetFieldsInStruct.PinOptions=True
 EdGraphNode_Comment.GraphNodeDetail=True
 EdGraphNode_Comment.Comment=True
+BP_Chest_C.Tick=True
+BP_Chest_C.Replication=True
+BP_Chest_C.Rendering=True
+BP_Chest_C.Collision=True
+BP_Chest_C.Actor=True
+BP_Chest_C.Input=True
+BP_Chest_C.HLOD=True
+BP_Chest_C.Physics=True
+BP_Chest_C.Events=True
+BP_Chest_C.TransformCommon=True
+BP_Chest_C.Networking=True
 
 [DetailPropertyExpansion]
 StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
@@ -1341,11 +1358,11 @@ CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 MassSettings="\"Object.Mass\" "
 DeveloperSettings=
-PrimitiveComponent=
+PrimitiveComponent="\"Object.Collision.BodyInstance\" "
 SceneComponent=
 ActorComponent=
 StaticMeshComponent="\"Object.Collision.BodyInstance\" "
-MeshComponent=
+MeshComponent="\"Object.Collision.BodyInstance\" "
 BP_ThirdPersonCharacter_C="\"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
 Character="\"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
 Pawn="\"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
@@ -1365,21 +1382,22 @@ WB_Menu_C=
 CanvasPanel="\"Object.Render Transform.RenderTransform\" "
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/ThirdPerson/Maps/ThirdPersonMap
-MRUItem1=/Game/StarterContent/Maps/Advanced_Lighting
-MRUItem2=/Game/StarterContent/Maps/Minimal_Default
-MRUItem3=/Game/StarterContent/Maps/StarterMap
-MRUItem4=/Game/DT_ItemDataTable
-MRUItem5=/Game/St_ItemData
-MRUItem6=/Game/St_InventorySlots
-MRUItem7=/Game/WB_InventorySlot
-MRUItem8=/Engine/EditorBlueprintResources/StandardMacros
-MRUItem9=/Game/BP_Item
-MRUItem10=/Game/BP_InventoryComponent
-MRUItem11=/Game/WB_Menu
-MRUItem12=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem13=/Game/ThirdPerson/Input/IMC_Default
-MRUItem14=/Game/ThirdPerson/Input/Actions/IA_Inventory
+MRUItem0=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem1=/Game/BP_InventoryComponent
+MRUItem2=/Game/WB_Menu
+MRUItem3=/Game/DT_ItemDataTable
+MRUItem4=/Game/BP_Chest
+MRUItem5=/Game/ThirdPerson/Maps/ThirdPersonMap
+MRUItem6=/Game/StarterContent/Maps/Advanced_Lighting
+MRUItem7=/Game/StarterContent/Maps/Minimal_Default
+MRUItem8=/Game/StarterContent/Maps/StarterMap
+MRUItem9=/Game/St_ItemData
+MRUItem10=/Game/St_InventorySlots
+MRUItem11=/Game/WB_InventorySlot
+MRUItem12=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem13=/Game/BP_Item
+MRUItem14=/Game/ThirdPerson/Input/IMC_Default
+MRUItem15=/Game/ThirdPerson/Input/Actions/IA_Inventory
 
 [UMGEditor.Designer]
 bCommonResolutionSelected=False
@@ -1564,6 +1582,7 @@ bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
 
 [PlacementMode]
+RecentlyPlaced=/Game/BP_Chest.BP_Chest;
 RecentlyPlaced=/Game/FreeMeleeWeaps/Static_Meshes/SM_Sword.SM_Sword;
 RecentlyPlaced=/Game/BP_Item.BP_Item;
 
@@ -2904,5 +2923,5 @@ UniformGridPanel.Accessibility=False
 LastLogListing=PIE
 
 [/Script/Fab.FabLocalAssets]
-PathsListingID=(("/Game/__ExternalActors__", "da6e582c-c12b-4768-b67f-8e248339c071"))
+PathsListingID=(("/Game/__ExternalActors__", "da6e582c-c12b-4768-b67f-8e248339c071"),("/Game/Fab/Chest", "0be07664-3b64-441d-8164-2fc04c11eea5"))
 
